--- a/train_configurations/cnn3d.yaml
+++ b/train_configurations/cnn3d.yaml
@@ -6,20 +6,27 @@ tune_config:
       epochs: tune.choice([100])
       lr: tune.choice([0.003, 0.001, 0.0009])
       act_fun: tune.choice(['relu', 'elu'])
-      batch_size: tune.choice([200, 400, 600, 1000])
+      batch_size: tune.choice([10, 20, 40])
       #l1: 'tune.sample_from(lambda _: 2 ** np.random.randint(2, 9))'
       #l2: 'tune.sample_from(lambda _: 2 ** np.random.randint(2, 9))'
       #lr: 'tune.loguniform(1e-4, 1e-1)'
   
 # Dataset
 dataset:
-  name: 'nls_kdd'
+  name: 'albania'
   sequential: False
+  in_channel: 24
+  patch_size: 7
+  coords_path: "/home/roberto/Documents/backup_rob/esa/fdir/data/hyper/albania/mosaic/selected_pixel_32.pkl" #Take relative path
+  train_split: 0.70
 
 # Model
 model:
-  name: 'vae'
+  name: 'cnn3d'
+  dilation: 1
+  class_number: 2 #it means 2 output neurons >>> crossenetropy loss (not binary) with Softmax out of the box
 
 resources:
   gpu_trial: 0.25
   cpu_trial: 4
+
