added cnn3d working version with flexible crossentropy loss based on class num

--- a/train_configurations/cnn3d.yaml
+++ b/train_configurations/cnn3d.yaml
@@ -1,32 +1,36 @@
 # Optimization
 tune_config:
-      intermediate_dim: tune.choice([20, 40, 50])
-      latent_dim: tune.choice([2, 3, 4])
-      weight_KL_loss: tune.choice([0.4, 0.6, 0.8])
+      #intermediate_dim: tune.choice([20, 40, 50])
       epochs: tune.choice([100])
-      lr: tune.choice([0.003, 0.001, 0.0009])
-      act_fun: tune.choice(['relu', 'elu'])
+      lr: tune.choice([0.003, 0.001, 0.0009, 0.0003, 0.0001])
+      act: tune.choice(['Relu', 'Elu', 'Selu', 'LRelu'])
       batch_size: tune.choice([10, 20, 40])
+      num_filter: tune.choice([10, 20, 40, 60])
       #l1: 'tune.sample_from(lambda _: 2 ** np.random.randint(2, 9))'
       #l2: 'tune.sample_from(lambda _: 2 ** np.random.randint(2, 9))'
       #lr: 'tune.loguniform(1e-4, 1e-1)'
   
 # Dataset
 dataset:
-  name: 'albania'
+  name: 'albania_supervised'
   sequential: False
   in_channel: 24
   patch_size: 7
   coords_path: "/home/roberto/Documents/backup_rob/esa/fdir/data/hyper/albania/mosaic/selected_pixel_32.pkl" #Take relative path
+  test_coords_path: "/home/roberto/Documents/backup_rob/esa/fdir/data/hyper/albania/mosaic/test/test.pkl"
   train_split: 0.70
 
 # Model
 model:
   name: 'cnn3d'
   dilation: 1
-  class_number: 2 #it means 2 output neurons >>> crossenetropy loss (not binary) with Softmax out of the box
+  class_number: 1 # switchig to crossentropu use 2 n_ckasse that it means 2 output neurons >>> crossenetropy loss (not binary) with Softmax out of the box
+  n_channel: 24
 
 resources:
   gpu_trial: 0.25
   cpu_trial: 4
+
+opt:
+  fine_tuning: False
 
