--- a/train_configurations/cnn3d.yaml
+++ b/train_configurations/cnn3d.yaml
@@ -1,13 +1,13 @@
 # Optimization
 tune_config:
       #intermediate_dim: tune.choice([20, 40, 50])
-      epochs: tune.choice([100, 200, 300])
+      epochs: tune.choice([200, 300])
       lr: tune.choice([0.003, 0.001, 0.0009, 0.0003, 0.0001])
       lr_patience: tune.choice([3, 5, 7, 10])
       act: tune.choice(['Relu', 'Elu', 'Selu', 'LRelu'])
       batch_size: tune.choice([10, 20, 40])
-      patch_size: tune.choice([7, 9, 11, 15, 25])
-      num_filter: tune.choice([10, 20, 40])
+      patch_size: tune.choice([7, 9, 11])
+      num_filter: tune.choice([10, 20, 40, 60, 100])
       filter_size: tune.choice([3, 5])
       #l1: 'tune.sample_from(lambda _: 2 ** np.random.randint(2, 9))'
       #l2: 'tune.sample_from(lambda _: 2 ** np.random.randint(2, 9))'
@@ -36,7 +36,7 @@ resources:
 
 opt:
   fine_tuning: False
-  metrics: ['val_loss', 'val_acc', 'val_f1', 'test_acc', 'test_f1']
+  metrics: ['train_loss', 'val_loss', 'val_acc', 'val_f1', 'test_acc', 'test_f1']
   order_by: 'val_f1'
 
 
