--- a/train_configurations/conv_ae.yaml
+++ b/train_configurations/conv_ae.yaml
@@ -4,7 +4,7 @@ tune_config:
       epochs: tune.choice([400, 500, 600])
       lr: tune.choice([0.0001, 0.0003, 0.0006, 0.0009, 0.001, 0.003])
       batch_size: tune.choice([200, 400, 600, 1000])
-      seq_in_length: tune.choice([3,5,7,10])
+      seq_in_length: tune.choice([16])
       filter_num: tune.choice([8,16,32,64])
       latent_dim: tune.choice([2, 5, 10,20,40,80])
       n_layers: tune.choice([1])
@@ -17,8 +17,9 @@ dataset:
   name: 'sentinel'
   sequential: False
   sample_rate: "4s"
-  scale: True
+  scaled: True
   clean: True
+  shuffle: False #shuffle applied on the row of dataset
   feats: 'all'
   columns: ['RW1_motcurr', 'RW2_motcurr', 'RW3_motcurr', 'RW4_motcurr', 'RW1_therm',
           'RW2_therm', 'RW3_therm', 'RW4_therm', 'RW1_speed', 'RW2_speed',
@@ -27,6 +28,8 @@ dataset:
   dataset_subset: 100000
   columns_subset: 0
   target: None
+  predict: False
+  train_val_split: 0.8
 
 # Model
 model:
