--- a/train_configurations/conv_ae.yaml
+++ b/train_configurations/conv_ae.yaml
@@ -1,13 +1,13 @@
 # Optimization
 tune_config:
-      intermediate_dim: tune.choice([5, 10, 20, 40, 50, 80, 100])
-      epochs: tune.choice([400, 500, 600])
-      lr: tune.choice([0.0001, 0.0003, 0.0006, 0.0009, 0.001, 0.003])
-      batch_size: tune.choice([200, 400, 600, 1000])
+      #intermediate_dim: tune.choice([5, 10, 20])
+      epochs: tune.choice([500])
+      lr: tune.choice([0.001, 0.0001, 0.0003, 0.0006, 0.0009])
+      batch_size: tune.choice([10, 50, 100, 200, 500, 1000])
       seq_in_length: tune.choice([16])
-      filter_num: tune.choice([8,16,32,64])
-      latent_dim: tune.choice([2, 5, 10,20,40,80])
-      n_layers: tune.choice([1])
+      filter_num: tune.choice([8, 16])
+      latent_dim: tune.choice([2, 5, 10, 20])
+      n_layers: tune.choice([1, 2])
       lr_patience: tune.choice([3,5,7])
       kernel_size: tune.choice([3])
       activation: tune.choice(['Relu', 'Elu', 'Selu', 'LRelu'])
@@ -21,11 +21,12 @@ dataset:
   clean: True
   shuffle: False #shuffle applied on the row of dataset
   feats: 'all'
-  columns: ['RW1_motcurr', 'RW2_motcurr', 'RW3_motcurr', 'RW4_motcurr', 'RW1_therm',
-          'RW2_therm', 'RW3_therm', 'RW4_therm', 'RW1_speed', 'RW2_speed',
-          'RW3_speed', 'RW4_speed', 'RW1_cmd_volt', 'RW2_cmd_volt',
+  columns: ['RW1_motcurr',  'RW1_therm', 'RW1_speed',  'RW1_cmd_volt',
+            'RW2_motcurr', 'RW3_motcurr', 'RW4_motcurr',
+          'RW2_therm', 'RW3_therm', 'RW4_therm','RW2_speed',
+          'RW3_speed', 'RW4_speed','RW2_cmd_volt',
           'RW3_cmd_volt', 'RW4_cmd_volt']
-  dataset_subset: 100000
+  dataset_subset: 1000000
   columns_subset: 0
   target: None
   predict: False
