reducing hypers 2 run

--- a/train_configurations/conv_ae.yaml
+++ b/train_configurations/conv_ae.yaml
@@ -1,16 +1,17 @@
 # Optimization
 tune_config:
       #intermediate_dim: tune.choice([5, 10, 20])
-      epochs: tune.choice([500])
-      lr: tune.choice([0.0009])
-      batch_size: tune.choice([100])
+      epochs: tune.choice([200])
+      lr: tune.choice([0.0009, 0.0003])
+      batch_size: tune.choice([100, 500])
       seq_in_length: tune.choice([16])
-      filter_num: tune.choice([32])
-      latent_dim: tune.choice([30])
-      n_layers: tune.choice([2])
+      dilation: tune.choice([1])
+      filter_num: tune.choice([16, 20, 32])
+      latent_dim: tune.choice([30, 50])
+      n_layers: tune.choice([2, 3])
       lr_patience: tune.choice([5])
-      kernel_size: tune.choice([3])
-      activation: tune.choice(['Relu'])
+      kernel_size: tune.choice([3, 5, 7])
+      activation: tune.choice(['Relu', 'Elu'])  #Only the first capital letter
 
 # Dataset
 dataset:
@@ -25,10 +26,14 @@ dataset:
              'RW1_therm', 'RW2_therm', 'RW3_therm', 'RW4_therm',
             'RW1_speed', 'RW2_speed', 'RW3_speed', 'RW4_speed',
             'RW1_cmd_volt', 'RW2_cmd_volt', 'RW3_cmd_volt', 'RW4_cmd_volt']
-  dataset_subset: 10000000
+  #columns: [
+  #          'RW3_motcurr', 'RW3_therm', 'RW3_speed', 'RW3_cmd_volt',
+  #          ]
+  dataset_subset: 1000000
   columns_subset: 0
   target: None
   predict: False
+  forecast_all: False
   train_val_split: 0.8
 
 # Model
