--- a/train_configurations/lstm_ae.yaml
+++ b/train_configurations/lstm_ae.yaml
@@ -2,14 +2,16 @@
 tune_config:
       #intermediate_dim: tune.choice([1, 2, 5, 10, 20])
       epochs: tune.choice([200])
-      lr: tune.choice([0.0009])
-      batch_size: tune.choice([1000])
+      lr: tune.choice([0.0006, 0.001, 0.0003])
+      batch_size: tune.choice([100, 500, 1000])
       seq_in_length: tune.choice([30])
-      embedding_dim: tune.choice([8])
-      latent_dim: tune.choice([40])
-      n_layers_cell_1: tune.choice([2])
-      n_layers_cell_2: tune.choice([2])
-      lr_patience: tune.choice([5])
+      embedding_dim: tune.choice([10, 20, 32, 40, 48])
+      latent_dim: tune.choice([40, 60, 80])
+      n_layers_cell_1: tune.choice([2, 3])
+      n_layers_cell_2: tune.choice([1, 2])
+      #activation: tune.choice(['Relu', 'Elu', 'Selu', 'None'])
+      activation: tune.choice(['None'])
+      lr_patience: tune.choice([5, 10])
 
 # Dataset
 dataset:
@@ -24,10 +26,14 @@ dataset:
              'RW1_therm', 'RW2_therm', 'RW3_therm', 'RW4_therm',
             'RW1_speed', 'RW2_speed', 'RW3_speed', 'RW4_speed',
             'RW1_cmd_volt', 'RW2_cmd_volt', 'RW3_cmd_volt', 'RW4_cmd_volt']
-  dataset_subset: 10000000
+  #columns: [
+  #          'RW3_motcurr', 'RW3_therm', 'RW3_speed', 'RW3_cmd_volt',
+  #          ]
+  dataset_subset: 1000000
   columns_subset: 0
   target: None
   predict: False
+  forecast_all: False
   train_val_split: 0.8
 
 # Model
