reducing hypers 2 run

--- a/train_configurations/conv_ae.yaml
+++ b/train_configurations/conv_ae.yaml
@@ -4,12 +4,14 @@ tune_config:
       epochs: tune.choice([200])
       lr: tune.choice([0.0009, 0.0003])
       batch_size: tune.choice([100, 500])
-      seq_in_length: tune.choice([16])
+      seq_in_length: tune.choice([40])
       dilation: tune.choice([1])
-      filter_num: tune.choice([16, 20, 32])
-      latent_dim: tune.choice([30, 50])
-      n_layers: tune.choice([2, 3])
-      lr_patience: tune.choice([5])
+      filter_num: tune.choice([16, 20, 32, 40, 48, 56, 64])
+      latent_dim: tune.choice([30, 50, 60, 80, 100)
+      n_layers: tune.choice([1,2,3])
+      lr_patience: tune.choice([5,10])
+      flattened: tune.choice([1])
+      increasing: tune.choice([0])
       kernel_size: tune.choice([3, 5, 7])
       activation: tune.choice(['Relu', 'Elu'])  #Only the first capital letter
 
